--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,15 @@ html {
   font-size: 62.5%;
   font-family: var(--ff-dm);
 }
+
+
+header{
+  dis
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  min-width: 320px;
+  height: 334px;
+  text-align: center;
+}
